src/snapshots/mirror_clone__python_version__tests__parse@1.0.post456.dev34.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: None,
        post: Some(
            456,
        ),
        dev: Some(
            34,
        ),
        local: None,
    },
)
