src/snapshots/mirror_clone__python_version__tests__parse@1.0b2.post345.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: Some(
            Beta(
                2,
            ),
        ),
        post: Some(
            345,
        ),
        dev: None,
        local: None,
    },
)
