src/snapshots/mirror_clone__python_version__tests__parse@1.0pre-1-1.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
        ],
        pre: Some(
            RC(
                1,
            ),
        ),
        post: Some(
            1,
        ),
        dev: None,
        local: None,
    },
)
