src/snapshots/mirror_clone__python_version__tests__parse@1.1beta2.snap
---
source: src/python_version.rs
expression: "Version::parse(input)"
---
Ok(
    Version {
        epoch: 0,
        chunks: [
            1,
            1,
        ],
        pre: Some(
            Beta(
                2,
            ),
        ),
        post: None,
        dev: None,
        local: None,
    },
)
